# cookiecutter_python_package

./: cookiecutter.json
{{cookiecutter.directory_name}}/: .coveragerc  Containerfile  Makefile  mkdocs.yml  pyproject.toml  setup.py
{{cookiecutter.directory_name}}/test/: conftest.py
